<resources>
    <string name="app_name">EngineerCalculator</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="delete">C</string>
    <string name="plus_minus">+/-</string>
    <string name="percent">%</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
    <string name="mc">MC</string>
    <string name="mr">MR</string>
    <string name="m_minus">M-</string>
    <string name="m_plus">M+</string>
    <string name="radical">√</string>
    <string name="switcher">Switch</string>
</resources>